<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--
           LinearLayout holds children items and make them vertical orientation and
           make them all in the center
       !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:context=".LoginFragment"
            tools:ignore="ScrollViewSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:text="@string/please_login_to_your_account"
                android:textColor="@color/blue" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="name"
                android:background="@drawable/edit_text_view"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="#546E7A"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="password"
                android:background="@drawable/edit_text_view"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="#546E7A"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/forget_password"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/Or"
                android:textSize="12sp" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </FrameLayout>
</layout>