<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/namename"
                tools:ignore="RtlHardcoded"
                android:padding="20dp"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_view"
                android:gravity="center|center"
                android:layout_gravity="center"
                android:hint="@string/shoe_name"
                android:padding="20dp"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                android:textColor="@color/blue"
                tools:ignore="RtlHardcoded"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/size"
                tools:ignore="RtlHardcoded"
                android:padding="20dp"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_view"
                android:gravity="center|center"
                android:layout_gravity="center"
                android:textColor="@color/blue"
                android:hint="@string/shoe_size"
                android:padding="20dp"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"/>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:layout_gravity="center"
            android:text="@string/company"
            tools:ignore="RtlHardcoded"
            android:padding="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

            <TextView
                android:id="@+id/shoe_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_view"
                android:gravity="center|center"
                android:layout_gravity="center"
                android:hint="@string/company_name"
                android:padding="20dp"
                android:textColorHint="#78909C"
                android:textColor="@color/blue"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"/>
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:layout_gravity="center"
            android:text="@string/desc"
            tools:ignore="RtlHardcoded"
            android:padding="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

            <TextView
                android:id="@+id/shoe_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_view"
                android:gravity="center|center"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                android:hint="@string/describtion"
                android:padding="20dp"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/purple_700"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="1dp"/>
    </LinearLayout>

</layout>